tests/bom/bom.exp
Error ------------------------------------------------------------------------------------------------- FormData.js:5:14

Cannot call `FormData` with empty string bound to `form` because string [1] is incompatible with `HTMLFormElement` [2].
[incompatible-call]

   FormData.js:5:14
     5| new FormData(''); // incorrect
                     ^^ [1]

References:
   <BUILTINS>/bom.js:629:24
   629|     constructor(form?: HTMLFormElement, submitter?: HTMLElement | null): void;
                               ^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- FormData.js:6:14

Cannot call `FormData` with `document.createElement(...)` bound to `form` because `HTMLInputElement` [1] is incompatible
with `HTMLFormElement` [2]. [incompatible-call]

   FormData.js:6:14
      6| new FormData(document.createElement('input')); // incorrect
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/dom.js:1174:70
   1174|   createElement(tagName: 'input', options?: ElementCreationOptions): HTMLInputElement;
                                                                              ^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/bom.js:629:24
    629|     constructor(form?: HTMLFormElement, submitter?: HTMLElement | null): void;
                                ^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:10:46

Cannot call `FormData` with `"submitter"` bound to `submitter` because: [incompatible-call]
 - Either string [1] is incompatible with `HTMLElement` [2].
 - Or string [1] is incompatible with null [3].

   FormData.js:10:46
    10| new FormData(document.createElement('form'), "submitter"); // incorrect
                                                     ^^^^^^^^^^^ [1]

References:
   <BUILTINS>/bom.js:629:53
   629|     constructor(form?: HTMLFormElement, submitter?: HTMLElement | null): void;
                                                            ^^^^^^^^^^^ [2]
   <BUILTINS>/bom.js:629:67
   629|     constructor(form?: HTMLFormElement, submitter?: HTMLElement | null): void;
                                                                          ^^^^ [3]


Error ------------------------------------------------------------------------------------------------ FormData.js:17:19

Cannot assign `a.get(...)` to `d` because null or undefined [1] is incompatible with string [2]. [incompatible-type]

   FormData.js:17:19
    17| const d: string = a.get('foo'); // incorrect
                          ^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:632:24
   632|     get(name: string): ?FormDataEntryValue;
                               ^^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:17:10
    17| const d: string = a.get('foo'); // incorrect
                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:17:19

Cannot assign `a.get(...)` to `d` because `File` [1] is incompatible with string [2]. [incompatible-type]

   FormData.js:17:19
    17| const d: string = a.get('foo'); // incorrect
                          ^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:632:25
   632|     get(name: string): ?FormDataEntryValue;
                                ^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:17:10
    17| const d: string = a.get('foo'); // incorrect
                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:18:17

Cannot assign `a.get(...)` to `e` because null or undefined [1] is incompatible with `Blob` [2]. [incompatible-type]

   FormData.js:18:17
    18| const e: Blob = a.get('foo'); // incorrect
                        ^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:632:24
   632|     get(name: string): ?FormDataEntryValue;
                               ^^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:18:10
    18| const e: Blob = a.get('foo'); // incorrect
                 ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:18:17

Cannot assign `a.get(...)` to `e` because string [1] is incompatible with `Blob` [2]. [incompatible-type]

   FormData.js:18:17
    18| const e: Blob = a.get('foo'); // incorrect
                        ^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:632:25
   632|     get(name: string): ?FormDataEntryValue;
                                ^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:18:10
    18| const e: Blob = a.get('foo'); // incorrect
                 ^^^^ [2]


Error ------------------------------------------------------------------------------------------------- FormData.js:20:7

Cannot call `a.get` with `2` bound to `name` because number [1] is incompatible with string [2]. [incompatible-call]

   FormData.js:20:7
    20| a.get(2); // incorrect
              ^ [1]

References:
   <BUILTINS>/bom.js:632:15
   632|     get(name: string): ?FormDataEntryValue;
                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:24:43

Cannot assign `a.getAll(...)` to `a2` because in array element: [incompatible-type]
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with `File` [3].

Arrays are invariantly typed. See
https://flow.org/en/docs/faq/#why-cant-i-pass-an-arraystring-to-a-function-that-takes-an-arraystring-number.

   FormData.js:24:43
    24| const a2: Array<string | File | number> = a.getAll('foo'); // incorrect
                                                  ^^^^^^^^^^^^^^^

References:
   FormData.js:24:33
    24| const a2: Array<string | File | number> = a.getAll('foo'); // incorrect
                                        ^^^^^^ [1]
   <BUILTINS>/bom.js:626:27
   626| type FormDataEntryValue = string | File
                                  ^^^^^^ [2]
   <BUILTINS>/bom.js:626:36
   626| type FormDataEntryValue = string | File
                                           ^^^^ [3]


Error ------------------------------------------------------------------------------------------------ FormData.js:25:41

Cannot assign `a.getAll(...)` to `a3` because in array element: [incompatible-type]
 - Either `Blob` [1] is incompatible with `File` [2].
 - Or `Blob` [1] is incompatible with string [3].

Arrays are invariantly typed. See
https://flow.org/en/docs/faq/#why-cant-i-pass-an-arraystring-to-a-function-that-takes-an-arraystring-number.

   FormData.js:25:41
    25| const a3: Array<string | Blob | File> = a.getAll('foo'); // incorrect
                                                ^^^^^^^^^^^^^^^

References:
   FormData.js:25:26
    25| const a3: Array<string | Blob | File> = a.getAll('foo'); // incorrect
                                 ^^^^ [1]
   <BUILTINS>/bom.js:626:36
   626| type FormDataEntryValue = string | File
                                           ^^^^ [2]
   <BUILTINS>/bom.js:626:27
   626| type FormDataEntryValue = string | File
                                  ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------ FormData.js:26:10

Cannot call `a.getAll` with `23` bound to `name` because number [1] is incompatible with string [2]. [incompatible-call]

   FormData.js:26:10
    26| a.getAll(23); // incorrect
                 ^^ [1]

References:
   <BUILTINS>/bom.js:633:18
   633|     getAll(name: string): Array<FormDataEntryValue>;
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- FormData.js:30:3

Cannot call `a.set` because: [incompatible-call]
 - Either object literal [1] is incompatible with `Blob` [2].
 - Or object literal [1] is incompatible with `File` [3].

   FormData.js:30:3
    30| a.set('foo', {}); // incorrect
          ^^^

References:
   FormData.js:30:14
    30| a.set('foo', {}); // incorrect
                     ^^ [1]
   <BUILTINS>/bom.js:636:30
   636|     set(name: string, value: Blob, filename?: string): void;
                                     ^^^^ [2]
   <BUILTINS>/bom.js:637:30
   637|     set(name: string, value: File, filename?: string): void;
                                     ^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:31:3

Cannot call `a.set` because: [incompatible-call]
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with string [3].
 - Or number [1] is incompatible with string [4].

   FormData.js:31:3
    31| a.set(2, 'bar'); // incorrect
          ^^^

References:
   FormData.js:31:7
    31| a.set(2, 'bar'); // incorrect
              ^ [1]
   <BUILTINS>/bom.js:635:15
   635|     set(name: string, value: string): void;
                      ^^^^^^ [2]
   <BUILTINS>/bom.js:636:15
   636|     set(name: string, value: Blob, filename?: string): void;
                      ^^^^^^ [3]
   <BUILTINS>/bom.js:637:15
   637|     set(name: string, value: File, filename?: string): void;
                      ^^^^^^ [4]


Error ------------------------------------------------------------------------------------------------- FormData.js:32:3

Cannot call `a.set` because: [incompatible-call]
 - Either string [1] is incompatible with `Blob` [2].
 - Or string [1] is incompatible with `File` [3].

   FormData.js:32:3
    32| a.set('foo', 'bar', 'baz'); // incorrect
          ^^^

References:
   FormData.js:32:14
    32| a.set('foo', 'bar', 'baz'); // incorrect
                     ^^^^^ [1]
   <BUILTINS>/bom.js:636:30
   636|     set(name: string, value: Blob, filename?: string): void;
                                     ^^^^ [2]
   <BUILTINS>/bom.js:637:30
   637|     set(name: string, value: File, filename?: string): void;
                                     ^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:35:3

Cannot call `a.set` because: [incompatible-call]
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with string [3].

   FormData.js:35:3
    35| a.set('bar', new File([], 'q'), 2) // incorrect
          ^^^

References:
   FormData.js:35:33
    35| a.set('bar', new File([], 'q'), 2) // incorrect
                                        ^ [1]
   <BUILTINS>/bom.js:636:47
   636|     set(name: string, value: Blob, filename?: string): void;
                                                      ^^^^^^ [2]
   <BUILTINS>/bom.js:637:47
   637|     set(name: string, value: File, filename?: string): void;
                                                      ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:38:3

Cannot call `a.set` because: [incompatible-call]
 - Either number [1] is incompatible with string [2].
 - Or `Blob` [3] is incompatible with `File` [4].

   FormData.js:38:3
    38| a.set('bar', new Blob, 2) // incorrect
          ^^^

References:
   FormData.js:38:24
    38| a.set('bar', new Blob, 2) // incorrect
                               ^ [1]
   <BUILTINS>/bom.js:636:47
   636|     set(name: string, value: Blob, filename?: string): void;
                                                      ^^^^^^ [2]
   FormData.js:38:14
    38| a.set('bar', new Blob, 2) // incorrect
                     ^^^^^^^^ [3]
   <BUILTINS>/bom.js:637:30
   637|     set(name: string, value: File, filename?: string): void;
                                     ^^^^ [4]


Error ------------------------------------------------------------------------------------------------- FormData.js:42:3

Cannot call `a.append` because: [incompatible-call]
 - Either object literal [1] is incompatible with `Blob` [2].
 - Or object literal [1] is incompatible with `File` [3].

   FormData.js:42:3
    42| a.append('foo', {}); // incorrect
          ^^^^^^

References:
   FormData.js:42:17
    42| a.append('foo', {}); // incorrect
                        ^^ [1]
   <BUILTINS>/bom.js:640:33
   640|     append(name: string, value: Blob, filename?: string): void;
                                        ^^^^ [2]
   <BUILTINS>/bom.js:641:33
   641|     append(name: string, value: File, filename?: string): void;
                                        ^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:43:3

Cannot call `a.append` because: [incompatible-call]
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with string [3].
 - Or number [1] is incompatible with string [4].

   FormData.js:43:3
    43| a.append(2, 'bar'); // incorrect
          ^^^^^^

References:
   FormData.js:43:10
    43| a.append(2, 'bar'); // incorrect
                 ^ [1]
   <BUILTINS>/bom.js:639:18
   639|     append(name: string, value: string): void;
                         ^^^^^^ [2]
   <BUILTINS>/bom.js:640:18
   640|     append(name: string, value: Blob, filename?: string): void;
                         ^^^^^^ [3]
   <BUILTINS>/bom.js:641:18
   641|     append(name: string, value: File, filename?: string): void;
                         ^^^^^^ [4]


Error ------------------------------------------------------------------------------------------------- FormData.js:44:3

Cannot call `a.append` because: [incompatible-call]
 - Either string [1] is incompatible with `Blob` [2].
 - Or string [1] is incompatible with `File` [3].

   FormData.js:44:3
    44| a.append('foo', 'bar', 'baz'); // incorrect
          ^^^^^^

References:
   FormData.js:44:17
    44| a.append('foo', 'bar', 'baz'); // incorrect
                        ^^^^^ [1]
   <BUILTINS>/bom.js:640:33
   640|     append(name: string, value: Blob, filename?: string): void;
                                        ^^^^ [2]
   <BUILTINS>/bom.js:641:33
   641|     append(name: string, value: File, filename?: string): void;
                                        ^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:48:3

Cannot call `a.append` because: [incompatible-call]
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with string [3].

   FormData.js:48:3
    48| a.append('bar', new File([], 'q'), 2) // incorrect
          ^^^^^^

References:
   FormData.js:48:36
    48| a.append('bar', new File([], 'q'), 2) // incorrect
                                           ^ [1]
   <BUILTINS>/bom.js:640:50
   640|     append(name: string, value: Blob, filename?: string): void;
                                                         ^^^^^^ [2]
   <BUILTINS>/bom.js:641:50
   641|     append(name: string, value: File, filename?: string): void;
                                                         ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- FormData.js:51:3

Cannot call `a.append` because: [incompatible-call]
 - Either number [1] is incompatible with string [2].
 - Or `Blob` [3] is incompatible with `File` [4].

   FormData.js:51:3
    51| a.append('bar', new Blob, 2) // incorrect
          ^^^^^^

References:
   FormData.js:51:27
    51| a.append('bar', new Blob, 2) // incorrect
                                  ^ [1]
   <BUILTINS>/bom.js:640:50
   640|     append(name: string, value: Blob, filename?: string): void;
                                                         ^^^^^^ [2]
   FormData.js:51:17
    51| a.append('bar', new Blob, 2) // incorrect
                        ^^^^^^^^ [3]
   <BUILTINS>/bom.js:641:33
   641|     append(name: string, value: File, filename?: string): void;
                                        ^^^^ [4]


Error ------------------------------------------------------------------------------------------------ FormData.js:55:10

Cannot call `a.delete` with `3` bound to `name` because number [1] is incompatible with string [2]. [incompatible-call]

   FormData.js:55:10
    55| a.delete(3); // incorrect
                 ^ [1]

References:
   <BUILTINS>/bom.js:643:18
   643|     delete(name: string): void;
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:59:23

Cannot assign `x` to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   FormData.js:59:23
    59| for (let x: number of a.keys()) {} // incorrect
                              ^^^^^^^^

References:
   <BUILTINS>/bom.js:645:22
   645|     keys(): Iterator<string>;
                             ^^^^^^ [1]
   FormData.js:59:13
    59| for (let x: number of a.keys()) {} // incorrect
                    ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:67:52

Cannot assign for-of element to destructuring because in index 1: [incompatible-type]
 - Either `Blob` [1] is incompatible with `File` [2].
 - Or `Blob` [1] is incompatible with string [3].

   FormData.js:67:52
    67| for (let [x, y]: [string, string | File | Blob] of a.entries()) {} // incorrect
                                                           ^^^^^^^^^^^

References:
   FormData.js:67:43
    67| for (let [x, y]: [string, string | File | Blob] of a.entries()) {} // incorrect
                                                  ^^^^ [1]
   <BUILTINS>/bom.js:626:36
   626| type FormDataEntryValue = string | File
                                           ^^^^ [2]
   <BUILTINS>/bom.js:626:27
   626| type FormDataEntryValue = string | File
                                  ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------ FormData.js:68:38

Cannot assign for-of element to destructuring because string [1] is incompatible with number [2] in index 0.
[incompatible-type]

   FormData.js:68:38
    68| for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                                             ^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:647:26
   647|     entries(): Iterator<[string, FormDataEntryValue]>;
                                 ^^^^^^ [1]
   FormData.js:68:19
    68| for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                          ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:68:38

Cannot assign for-of element to destructuring because `File` [1] is incompatible with string [2] in index 1.
[incompatible-type]

   FormData.js:68:38
    68| for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                                             ^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:647:34
   647|     entries(): Iterator<[string, FormDataEntryValue]>;
                                         ^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:68:27
    68| for (let [x, y]: [number, string] of a.entries()) {} // incorrect
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:69:38

Cannot assign for-of element to destructuring because `File` [1] is incompatible with number [2] in index 1.
[incompatible-type]

   FormData.js:69:38
    69| for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                                             ^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:647:34
   647|     entries(): Iterator<[string, FormDataEntryValue]>;
                                         ^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:69:27
    69| for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:69:38

Cannot assign for-of element to destructuring because string [1] is incompatible with number [2] in index 1.
[incompatible-type]

   FormData.js:69:38
    69| for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                                             ^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:647:34
   647|     entries(): Iterator<[string, FormDataEntryValue]>;
                                         ^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:69:27
    69| for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:69:38

Cannot assign for-of element to destructuring because in index 1: [incompatible-type]
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with `File` [3].

   FormData.js:69:38
    69| for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                                             ^^^^^^^^^^^

References:
   FormData.js:69:27
    69| for (let [x, y]: [string, number] of a.entries()) {} // incorrect
                                  ^^^^^^ [1]
   <BUILTINS>/bom.js:626:27
   626| type FormDataEntryValue = string | File
                                  ^^^^^^ [2]
   <BUILTINS>/bom.js:626:36
   626| type FormDataEntryValue = string | File
                                           ^^^^ [3]


Error ------------------------------------------------------------------------------------------------ FormData.js:70:38

Cannot assign for-of element to destructuring because string [1] is incompatible with number [2] in index 0.
[incompatible-type]

   FormData.js:70:38
    70| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                                             ^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:647:26
   647|     entries(): Iterator<[string, FormDataEntryValue]>;
                                 ^^^^^^ [1]
   FormData.js:70:19
    70| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                          ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:70:38

Cannot assign for-of element to destructuring because `File` [1] is incompatible with number [2] in index 1.
[incompatible-type]

   FormData.js:70:38
    70| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                                             ^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:647:34
   647|     entries(): Iterator<[string, FormDataEntryValue]>;
                                         ^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:70:27
    70| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:70:38

Cannot assign for-of element to destructuring because string [1] is incompatible with number [2] in index 1.
[incompatible-type]

   FormData.js:70:38
    70| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                                             ^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:647:34
   647|     entries(): Iterator<[string, FormDataEntryValue]>;
                                         ^^^^^^^^^^^^^^^^^^ [1]
   FormData.js:70:27
    70| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ FormData.js:70:38

Cannot assign for-of element to destructuring because in index 1: [incompatible-type]
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with `File` [3].

   FormData.js:70:38
    70| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                                             ^^^^^^^^^^^

References:
   FormData.js:70:27
    70| for (let [x, y]: [number, number] of a.entries()) {} // incorrect
                                  ^^^^^^ [1]
   <BUILTINS>/bom.js:626:27
   626| type FormDataEntryValue = string | File
                                  ^^^^^^ [2]
   <BUILTINS>/bom.js:626:36
   626| type FormDataEntryValue = string | File
                                           ^^^^ [3]


Error -------------------------------------------------------------------------------------------------- Headers.js:8:19

Cannot assign `headers.get(...)` to `b` because null [1] is incompatible with string [2]. [incompatible-type]

   Headers.js:8:19
      8| const b: string = headers.get('foo'); // incorrect
                           ^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:1577:24
   1577|     get(name: string): null | string;
                                ^^^^ [1]
   Headers.js:8:10
      8| const b: string = headers.get('foo'); // incorrect
                  ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- MediaDevices.js:11:24

Cannot call `navigator.mediaDevices.getUserMedia` because property `getUserMedia` is missing in undefined [1].
[incompatible-use]

   MediaDevices.js:11:24
    11| navigator.mediaDevices.getUserMedia({ audio: true }); // incorrect
                               ^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:325:20
   325|     mediaDevices?: MediaDevices;
                           ^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------- MutationObserver.js:10:5

Cannot call `MutationObserver` because function [1] requires another argument. [incompatible-call]

   MutationObserver.js:10:5
    10| new MutationObserver(); // incorrect
            ^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:676:5
   676|     constructor(callback: (arr: Array<MutationRecord>, observer: MutationObserver) => mixed): void;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------- MutationObserver.js:11:22

Cannot call `MutationObserver` with `42` bound to `callback` because number [1] is incompatible with function type [2].
[incompatible-call]

   MutationObserver.js:11:22
    11| new MutationObserver(42); // incorrect
                             ^^ [1]

References:
   <BUILTINS>/bom.js:676:27
   676|     constructor(callback: (arr: Array<MutationRecord>, observer: MutationObserver) => mixed): void;
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- MutationObserver.js:12:26

Cannot call `MutationObserver` with function bound to `callback` because number [1] is incompatible with array type [2]
in the first parameter. [incompatible-call]

   MutationObserver.js:12:26
    12| new MutationObserver((n: number) => {}); // incorrect
                                 ^^^^^^ [1]

References:
   <BUILTINS>/bom.js:676:33
   676|     constructor(callback: (arr: Array<MutationRecord>, observer: MutationObserver) => mixed): void;
                                        ^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- MutationObserver.js:18:3

Cannot call `o.observe` because function [1] requires another argument. [incompatible-call]

   MutationObserver.js:18:3
    18| o.observe(); // incorrect
          ^^^^^^^

References:
   <BUILTINS>/bom.js:677:5
   677|     observe(target: Node, options: MutationObserverInit): void;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------- MutationObserver.js:18:3

Cannot call `o.observe` because: [incompatible-call]
 - Either undefined [1] is incompatible with object type [2].
 - Or undefined [1] is incompatible with object type [3].
 - Or undefined [1] is incompatible with object type [4].

   MutationObserver.js:18:3
    18| o.observe(); // incorrect
          ^^^^^^^

References:
   MutationObserver.js:18:1
    18| o.observe(); // incorrect
        ^^^^^^^^^^^ [1]
   <BUILTINS>/bom.js:663:7
   663|     | { childList: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/bom.js:664:7
   664|     | { attributes: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/bom.js:665:7
   665|     | { characterData: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [4]


Error ----------------------------------------------------------------------------------------- MutationObserver.js:19:3

Cannot call `o.observe` because function [1] requires another argument. [incompatible-call]

   MutationObserver.js:19:3
    19| o.observe('invalid'); // incorrect
          ^^^^^^^

References:
   <BUILTINS>/bom.js:677:5
   677|     observe(target: Node, options: MutationObserverInit): void;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------- MutationObserver.js:19:3

Cannot call `o.observe` because: [incompatible-call]
 - Either undefined [1] is incompatible with object type [2].
 - Or undefined [1] is incompatible with object type [3].
 - Or undefined [1] is incompatible with object type [4].

   MutationObserver.js:19:3
    19| o.observe('invalid'); // incorrect
          ^^^^^^^

References:
   MutationObserver.js:19:1
    19| o.observe('invalid'); // incorrect
        ^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/bom.js:663:7
   663|     | { childList: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/bom.js:664:7
   664|     | { attributes: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/bom.js:665:7
   665|     | { characterData: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------- MutationObserver.js:19:11

Cannot call `o.observe` with `'invalid'` bound to `target` because string [1] is incompatible with `Node` [2].
[incompatible-call]

   MutationObserver.js:19:11
    19| o.observe('invalid'); // incorrect
                  ^^^^^^^^^ [1]

References:
   <BUILTINS>/bom.js:677:21
   677|     observe(target: Node, options: MutationObserverInit): void;
                            ^^^^ [2]


Error ----------------------------------------------------------------------------------------- MutationObserver.js:20:3

Cannot call `o.observe` because function [1] requires another argument. [incompatible-call]

   MutationObserver.js:20:3
    20| o.observe(div); // incorrect
          ^^^^^^^

References:
   <BUILTINS>/bom.js:677:5
   677|     observe(target: Node, options: MutationObserverInit): void;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------- MutationObserver.js:20:3

Cannot call `o.observe` because: [incompatible-call]
 - Either undefined [1] is incompatible with object type [2].
 - Or undefined [1] is incompatible with object type [3].
 - Or undefined [1] is incompatible with object type [4].

   MutationObserver.js:20:3
    20| o.observe(div); // incorrect
          ^^^^^^^

References:
   MutationObserver.js:20:1
    20| o.observe(div); // incorrect
        ^^^^^^^^^^^^^^ [1]
   <BUILTINS>/bom.js:663:7
   663|     | { childList: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/bom.js:664:7
   664|     | { attributes: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/bom.js:665:7
   665|     | { characterData: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------- MutationObserver.js:21:16

Cannot call `o.observe` with object literal bound to `options` because: [incompatible-call]
 - Either property `childList` is missing in object literal [1] but exists in object type [2].
 - Or property `attributes` is missing in object literal [1] but exists in object type [3].
 - Or property `characterData` is missing in object literal [1] but exists in object type [4].

   MutationObserver.js:21:16
    21| o.observe(div, {}); // incorrect
                       ^^ [1]

References:
   <BUILTINS>/bom.js:663:7
   663|     | { childList: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/bom.js:664:7
   664|     | { attributes: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/bom.js:665:7
   665|     | { characterData: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------- MutationObserver.js:22:16

Cannot call `o.observe` with object literal bound to `options` because: [incompatible-call]
 - Either property `childList` is missing in object literal [1] but exists in object type [2].
 - Or property `attributes` is missing in object literal [1] but exists in object type [3].
 - Or property `characterData` is missing in object literal [1] but exists in object type [4].

   MutationObserver.js:22:16
    22| o.observe(div, { subtree: true }); // incorrect
                       ^^^^^^^^^^^^^^^^^ [1]

References:
   <BUILTINS>/bom.js:663:7
   663|     | { childList: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/bom.js:664:7
   664|     | { attributes: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/bom.js:665:7
   665|     | { characterData: true, ... }
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------- MutationObserver.js:23:53

Cannot call `o.observe` with object literal bound to `options` because boolean [1] is incompatible with array type [2]
in property `attributeFilter`. [incompatible-call]

   MutationObserver.js:23:53
    23| o.observe(div, { attributes: true, attributeFilter: true }); // incorrect
                                                            ^^^^ [1]

References:
   <BUILTINS>/bom.js:671:21
   671|   attributeFilter?: Array<string>,
                            ^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- StorageManager.js:5:57

Cannot call `navigator.storage.persisted` because property `persisted` is missing in undefined [1]. [incompatible-use]

   StorageManager.js:5:57
     5|   const persisted: Promise<boolean> = navigator.storage.persisted(); // correct
                                                                ^^^^^^^^^

References:
   <BUILTINS>/bom.js:284:13
   284|   storage?: StorageManager
                    ^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------- StorageManager.js:7:25

Cannot get `navigator.storage.estimate` because property `estimate` is missing in undefined [1]. [incompatible-type]

   StorageManager.js:7:25
     7|   if (navigator.storage.estimate) {
                                ^^^^^^^^

References:
   <BUILTINS>/bom.js:284:13
   284|   storage?: StorageManager
                    ^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------- StorageManager.js:12:9

Cannot assign `estimate.usageDetails` to `usageDetails` because undefined [1] is incompatible with object type [2].
[incompatible-type]

   StorageManager.js:12:9
    12|         estimate.usageDetails;
                ^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:304:19
   304|   +usageDetails?: StorageManagerUsageDetails;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   StorageManager.js:11:27
    11|       const usageDetails: { [StorageManagerRegisteredEndpoint]: number } = // incorrect
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ URLSearchParams.js:8:19

Cannot assign `params.get(...)` to `b` because null [1] is incompatible with string [2]. [incompatible-type]

   URLSearchParams.js:8:19
      8| const b: string = params.get('foo'); // incorrect
                           ^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/bom.js:1594:24
   1594|     get(name: string): null | string;
                                ^^^^ [1]
   URLSearchParams.js:8:10
      8| const b: string = params.get('foo'); // incorrect
                  ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- crypto.js:15:50

Cannot call `crypto.getRandomValues` because in type argument `T`: [incompatible-call]
 - Either `Float32Array` [1] is incompatible with `Int8Array` [2].
 - Or `Float32Array` [1] is incompatible with `Uint8Array` [3].
 - Or `Float32Array` [1] is incompatible with `Uint8ClampedArray` [4].
 - Or `Float32Array` [1] is incompatible with `Int16Array` [5].
 - Or `Float32Array` [1] is incompatible with `Uint16Array` [6].
 - Or `Float32Array` [1] is incompatible with `Int32Array` [7].
 - Or `Float32Array` [1] is incompatible with `Uint32Array` [8].
 - Or `Float32Array` [1] is incompatible with `BigInt64Array` [9].
 - Or `Float32Array` [1] is incompatible with `BigUint64Array` [10].

   crypto.js:15:50
   15| const f32: Float32Array = crypto.getRandomValues(new Float32Array(2)); // incorrect
                                                        ^^^^^^^^^^^^^^^^^^^ [1]

References:
   <BUILTINS>/bom.js:43:8
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
              ^^^^^^^^^ [2]
   <BUILTINS>/bom.js:43:20
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                          ^^^^^^^^^^ [3]
   <BUILTINS>/bom.js:43:33
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                       ^^^^^^^^^^^^^^^^^ [4]
   <BUILTINS>/bom.js:43:53
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                                           ^^^^^^^^^^ [5]
   <BUILTINS>/bom.js:43:66
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                                                        ^^^^^^^^^^^ [6]
   <BUILTINS>/bom.js:43:80
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                                                                      ^^^^^^^^^^ [7]
   <BUILTINS>/bom.js:43:93
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                                                                                   ^^^^^^^^^^^ [8]
   <BUILTINS>/bom.js:43:107
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                                                                                                 ^^^^^^^^^^^^^ [9]
   <BUILTINS>/bom.js:43:123
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                                                                                                                 ^^^^^^^^^^^^^^ [10]


Error -------------------------------------------------------------------------------------------------- crypto.js:16:50

Cannot call `crypto.getRandomValues` because in type argument `T`: [incompatible-call]
 - Either `Float64Array` [1] is incompatible with `Int8Array` [2].
 - Or `Float64Array` [1] is incompatible with `Uint8Array` [3].
 - Or `Float64Array` [1] is incompatible with `Uint8ClampedArray` [4].
 - Or `Float64Array` [1] is incompatible with `Int16Array` [5].
 - Or `Float64Array` [1] is incompatible with `Uint16Array` [6].
 - Or `Float64Array` [1] is incompatible with `Int32Array` [7].
 - Or `Float64Array` [1] is incompatible with `Uint32Array` [8].
 - Or `Float64Array` [1] is incompatible with `BigInt64Array` [9].
 - Or `Float64Array` [1] is incompatible with `BigUint64Array` [10].

   crypto.js:16:50
   16| const f64: Float64Array = crypto.getRandomValues(new Float64Array(2)); // incorrect
                                                        ^^^^^^^^^^^^^^^^^^^ [1]

References:
   <BUILTINS>/bom.js:43:8
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
              ^^^^^^^^^ [2]
   <BUILTINS>/bom.js:43:20
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                          ^^^^^^^^^^ [3]
   <BUILTINS>/bom.js:43:33
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                       ^^^^^^^^^^^^^^^^^ [4]
   <BUILTINS>/bom.js:43:53
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                                           ^^^^^^^^^^ [5]
   <BUILTINS>/bom.js:43:66
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                                                        ^^^^^^^^^^^ [6]
   <BUILTINS>/bom.js:43:80
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                                                                      ^^^^^^^^^^ [7]
   <BUILTINS>/bom.js:43:93
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                                                                                   ^^^^^^^^^^^ [8]
   <BUILTINS>/bom.js:43:107
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                                                                                                 ^^^^^^^^^^^^^ [9]
   <BUILTINS>/bom.js:43:123
   43|     T: Int8Array | Uint8Array | Uint8ClampedArray | Int16Array | Uint16Array | Int32Array | Uint32Array | BigInt64Array | BigUint64Array
                                                                                                                                 ^^^^^^^^^^^^^^ [10]



Found 54 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
